# Apophenia-Machine

./: .gitignore  AESTHETIC.md  AGENTS.md  BUILD_AUDIT.md  BUILD_PROMPT.md  CONNECT_SCHEMA.yaml  DETECT_SCHEMA.yaml  EXHAUSTION_GUARDRAILS.md  EXHAUST_SCHEMA.yaml  HANDOFF.md  LICENSE  README.md  SCHEMA.yaml  USER_GUIDE.md  azoth.config.yaml  pyproject.toml
.github/workflows/: hardening.yml
albedo/: connections_analyzed.jsonl  registry.jsonl
albedo/exhaust/: 1allendiscoverycentertuftsuniversit_097638007_exhaust.yaml  1allendiscoverycentertuftsuniversit_171175023_exhaust.yaml  1independentresearcher11160caunesmi_715603255_exhaust.yaml  1independentresearcher11160caunesmi_885250859_exhaust.yaml  23ruedeslavandires_082087293_exhaust.yaml  2fieldsetal_210511373_exhaust.yaml  920192714_488341505_exhaust.yaml  alettersjournalexploring_959740142_exhaust.yaml  articleinfoabstract_734627521_exhaust.yaml  chapter13fieldspdf_264487800_exhaust.yaml  editedby_645428643_exhaust.yaml  (+8 more)
athanasor/: __init__.py  cli.py  config.py  domain_classifier.py  embeddings.py  llm.py  pdf_parser.py  registry.py  schemas.py
scripts/: check_cli.py  check_cli_diagnostics.py  check_connect_pruning.py  check_connect_reanalysis.py  check_domain_classifier.py  check_draft_artifacts.py  check_exhaust_llm_budget.py  check_human_gate_contract.py  check_llm_providers.py  check_negative_paths.py  check_ouroboros.py  check_pipeline_smoke.py  check_rubedo_review_path.py  check_semantic_pipeline.py  concludere.py  hardening_audit.py  incipere.py  migrate.py  validate.py
tests/: test_export_signals.py
(+116 files in other folders)
